--- a/package.json
+++ b/package.json
@@ -8,25 +8,17 @@
     "start": "node server.js",
     "lite-server": "lite-server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/coding-boot-camp/unit18hw.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/coding-boot-camp/unit18hw/issues"
-  },
-  "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "lite-server": "^2.5.3",
-    "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
-    "nodemon": "^2.0.7"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.11.14",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "webpack-pwa-manifest": "^4.3.0"
+    "nodemon": "^2.0.4"
   }
 }
