--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "heroku": "^7.47.11",
-    "if-env": "^1.0.4",
     "mongoose": "^5.11.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
